--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,12 @@
         {{ content }}
       </section>
     </div>
+
+    <!-- FOOTER -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>© 2025 Ali Cabir – Portfolio</p>
+      </footer>
+    </div>
   </body>
 </html>
