--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,12 @@
       </section>
     </div>
 
-    <!-- FOOTER -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+       <!-- FOOTER -->
+    <div id="footer_wrap" class="outer" style="margin-top: 40px;">
+      <footer class="inner" style="text-align: center; font-size: 0.9em; color: #aaa;">
         <p>© 2025 Ali Cabir – Portfolio</p>
       </footer>
     </div>
+
   </body>
 </html>
