--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,5 @@
-
+---
+---
 #main_content {
   font-size: 66px;
   line-height: 1.6; /* makes text more readable */
@@ -8,5 +9,6 @@
   font-size: 66px;
   margin-bottom: 1em;
 }
+
 
 
