--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,6 @@
+----
+----
+
 @import "jekyll-theme-slate";
 
 /* ----- Font Size Control ----- */
@@ -22,4 +25,5 @@
 .portfolio-content h3 {
   line-height: 1.2;
 }
+
 
